# templates

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  branches.json  channels.txt  compilers.json  flake.nix  init.nix  init.sh  rustfmt.toml  templates.nix
src/: basic_data.rs  git.rs  lib.rs  main.rs  nixpkgs_version.rs
src/language/: agda.rs  haskell.rs  mod.rs  replacer.rs  rust.rs  template.rs  terraform.rs
template/: flake.nix  scripts.nix  template.cabal
template/agda/: flake.nix  template.agda-lib
template/agda/src/: Core.agda
template/app/: Main.hs
template/flake/: flake.nix
template/haskell/: .gitignore  flake.nix  hie.yaml  scripts.nix  template.cabal
template/haskell/app/: Main.hs
template/haskell/test/: CoreSpec.hs  Main.hs
template/idris/: Export.idr  template.ipkg
template/rust/: Cargo.toml  flake.nix
template/rust/src/: lib.rs  main.rs
template/src/: Core.hs
template/terraform/: flake.nix
template/terraform/nix/configurations/modules/: nix.nix  openssh.nix  users.nix
template/terraform/nix/configurations/sample-server/: default.nix
template/terraform/nix/flake/: config.nix  default.nix  devshells.nix  formatters.nix  packages.nix
template/terraform/terraform/: main.tf
