[package]
name = "template-picker"
version = "0.0.1"
authors = ["Jonathan Lorimer <jonathan_lorimer@mac.com>"]
edition = "2021"
publish = false

[dependencies]
inquire = { version = "0.5.3", default-features = false, features = ["crossterm", "macros"] }
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tokio = { version = "1.25.0", default-features = false, features = ["rt-multi-thread", "macros", "process", "fs"] }
strum = { version = "0.24", default-features = false, features = ["derive"] }
serde_json = "1.0.93"
anyhow = "1.0.69"
spinners = "4.1.0"
scraper = "0.14.0"
fuzzy-matcher = "0.3.7"
rnix = "0.11.0"
