cabal-version: 2.2

name:           __package_name
version:        0.0.0.0
-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:     Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts
__default_extensions

  build-depends:
      base

    -- Codecs
    , aeson
    , deriving-aeson
    , binary

    -- Parallelism
    , async

    -- Mutability
    , primitive

    -- Binary
    , bytestring
    , vector

    -- Containers
    , containers
    , unordered-containers

    -- Utilities
    , text
    , foldl
    , safe-exceptions

  default-language: Haskell2010


library
  import: common-opts

  -- cabal-fmt: expand src
  exposed-modules:
      Core

  hs-source-dirs:
      src

executable __package_name
  import: common-opts
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends: __package_name

test-suite test
  import: common-opts
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends:
    , __package_name
    , QuickCheck
    , hspec
    , hspec-expectations
    , hspec-discover
