cabal-version: 3.4

name:           __package_name
version:        0.0.0.0
-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:     Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts
__default_extensions

  build-depends:
      base

    -- Codecs
    , aeson
    , deriving-aeson
    , binary

    -- Parallelism
    , async

    -- Mutability
    , primitive

    -- Binary
    , bytestring
    , vector

    -- Containers
    , containers
    , unordered-containers

    -- Utilities
    , text
    , foldl
    , safe-exceptions

  default-language: Haskell2010


library
  import: common-opts

  -- cabal-fmt: expand src
  exposed-modules:
      Core

  hs-source-dirs:
      src

executable __package_name
  import: common-opts
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends: __package_name

test-suite __package_name-tests
  import: common-opts
  type: exitcode-stdio-1.0
  hs-source-dirs: test

  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes -O0

  main-is: Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:

  build-depends:
    , __package_name
    , hedgehog
    , hspec
    , hspec-core
    , hspec-discover
    , hspec-expectations
    , hspec-hedgehog
